Fix regressions with item-sheet description height/overflow (#6440)

--- a/src/styles/item/_index.scss
+++ b/src/styles/item/_index.scss
@@ -179,7 +179,7 @@
         }
 
         section.sheet-body {
-            input[type="text"], input[type="number"] {
+            input[type=text], input[type=number] {
                 background: rgba(255, 255, 255, 0.5);
                 border: 1px solid #aaa;
                 padding: 3px;
@@ -255,7 +255,11 @@
             .item-description {
                 .descriptions {
                     height: 100%;
-                    overflow: hidden scroll;
+                    overflow: hidden;
+
+                    .main {
+                        height: 100%;
+                    }
 
                     .gm-notes {
                         background-color: var(--visibility-gm-bg);
